# teamshared

./: .env.example  .gitignore  .impeccable.md  AGENTS.md  DESIGN.md  Makefile  PRODUCT.md  README.md  memory-wiki-plan.md  plan.md  prod-plan.md  pyproject.toml  railway.toml
.cursor-plugin/: marketplace.json
.cursor/hooks/state/: continual-learning-index.json  continual-learning.json
.cursor/rules/: teamshared.mdc
.github/workflows/: ci.yml  security.yml
docs/: context-compression.md  operations.md
docs/archive/: memory-wiki-plan.md  plan.md
eval/: conversation_replay.example.yaml  conversation_replay.py  conversation_replay.teamshared.yaml  conversation_replay_lib.py  conversation_replay_report.py  golden.yaml  partner_queries.example.json  run.py
eval/agentic/: README.md  runner.py  tasks.yaml
eval/conversation_replay/: README.md  compare_cost.py  cursor-session.yaml  dashboard.html
infra/: Dockerfile  docker-compose.ollama-host.yml  docker-compose.yml  railway.agent-worker.toml  railway.curator.toml  railway.distiller.toml  railway.example.md  railway.integrations-sync.toml  railway.server.toml  tailscale.example.md
infra/migrations/: 001_init.sql  002_tenancy.sql  003_identity.sql  004_memory.sql  005_connectors.sql  006_rls.sql  007_seed_roles.sql  008_auth_function.sql  009_provisioning.sql  010_default_org.sql  011_consent.sql  012_wiki.sql  013_accounts.sql  014_procedures_ingestion.sql  015_strategic.sql  016_work.sql  017_work_comments.sql  018_work_permissions_backfill.sql  019_projects_expand.sql  020_work_hierarchy.sql  021_agent_runs.sql  022_workflows.sql  023_agent_runtime.sql  024_skills.sql  025_graph_edges.sql  026_migrate_procedures_to_skills.sql  027_ontology.sql  028_ontology_approvals.sql  029_playbook_skills.sql  030_ontology_rls_guc.sql  031_drop_consent_grants.sql  032_drop_agents.sql  033_agent_memory_delete.sql  034_soul.sql  035_integrations_oauth.sql  036_plans.sql  036_shared_files.sql  037_shared_file_slugs.sql  038_agent_memory_update.sql
infra/prometheus/: teamshared-alerts.yml
infra/runbooks/: backup_restore_dr.md  queue_observability.md
install_assets/claude/: mcp.json
install_assets/codex/: mcp.toml
install_assets/hermes/: capture.py  hooks.yaml  mcp.yaml  protocol.md
plugins/teamshared/: CHANGELOG.md  LICENSE  MARKETPLACE.md  README.md  mcp.json
plugins/teamshared-memory/: README.md  mcp.json
plugins/teamshared-memory/.cursor-plugin/: plugin.json
plugins/teamshared-memory/rules/: teamshared-memory.mdc
plugins/teamshared/.cursor-plugin/: plugin.json
plugins/teamshared/agents/: agents-memory-updater.md
plugins/teamshared/clients/: README.md  claude-desktop.json  hermes.config.yaml  protocol.md
plugins/teamshared/hooks/: continual-learning-stop.ts  conversation-capture-stop.ts  hooks.json  teamshared-state.ts
plugins/teamshared/install/: README.md
plugins/teamshared/rules/: teamshared.md  teamshared.mdc
product/: README.md
product/engine/: graph-schema.json
product/graph/: graph.json  graph.md
product/knowledge/: assumption-audit.md  cognee-competitor-analysis.md  design-partner-runbook.md  gbrain-competitor-analysis.md  gbrain-gap-closure-plan.md  headroom-architecture-analysis.md  metrics-tree.md  mex-competitor-analysis.md  narrative-review.md  openclaw-memory-analysis.md  palantir-ontology-analysis.md  promptql-competitor-analysis.md  ract-competitor-analysis.md  screenpipe-competitor-analysis.md  shared-brain-landscape-analysis.md  validation-scorecard.md  wiki-redesign-plan.md
product/sources/: README.md  clean-room-run-2026-07-11.md  cognee-research.md  company-brain-yc-rfs.md  design-partner-tracker.md  gbrain-competitor-research.md  headroom-research.md  interview-template.md  memory-wiki-plan.md  mex-research.md  openclaw-memory-research.md  palantir-foundry-ontology-research.md  plan.md  prod-plan.md  promptql-research.md  ract-research.md  screenpipe-research.md  shared-brain-landscape-2026.md  shipped-state-2026-07-12.md  teamshared-product.md
scripts/: backup.sh  bench_recall.py  eval_partner_replay.py  eval_replay.py  mcp_tool_audit.py  ollama-host.sh  smoke_all_tools.py  smoke_cross_agent.py  validate-teamshared-plugin.sh
src/actx/: __init__.py  __main__.py  auth.py  cli.py  config.py  logging.py  telemetry.py
src/actx/clients/: cursor.mcp.json  hermes.config.yaml  openclaw.md
src/actx/distill/: __init__.py  prompts.py  summarizer.py  worker.py
src/actx/memory/: __init__.py  graph.py  procedural.py  recall.py  semantic.py  types.py  working.py
src/actx/seed/: __init__.py  procedures.py
src/sptx/: __init__.py  __main__.py  auth.py  cli.py  config.py  logging.py  telemetry.py
src/teamshared/: __init__.py  __main__.py  auth.py  cli.py  config.py  config_validate.py  invite.py  logging.py  metrics.py  telemetry.py
tests/: compress_settings.py  compression_benchmarks.py  conftest.py  test_accounts.py  test_admin_export_erasure.py  test_admin_service.py  test_admin_ui.py  test_agent_runs.py  test_agent_runs_integration.py  test_agent_setup.py  test_agent_state.py  test_agent_tokens.py  test_api.py  test_api_integrations.py  test_api_redis_limits.py  test_attribution_override_audit.py  test_auth.py  test_autolink.py  test_capture.py  test_cli_doctor.py  test_cli_worker_health.py  test_compress.py  test_compression_integration.py  test_config.py  test_config_validate.py  test_connectors.py  test_connectors_oauth.py  test_consent.py  test_console.py  test_console_csrf.py  test_context_assembler.py  test_conversation_replay.py  test_curator.py  test_curator_worker.py  test_dashboard.py  test_distill_prompts.py  test_distill_worker.py  test_embeddings_local.py  test_file_publish.py  test_file_upload.py  (+62 more)
tests/eval/: named_thing_bench.json
(+227 files in other folders)
