[project]
name = "teamshared"
version = "0.5.0"
description = "Multi-pillar agent memory exposed as an MCP server. Shared brain for Cursor, Hermes, OpenClaw, and any MCP-aware agent."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "teamshared" }]
dependencies = [
    "fastmcp>=0.6.0",
    "starlette>=0.40.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.5.0",
    "mem0ai>=0.1.40",
    "psycopg[binary,pool]>=3.2.0",
    "redis>=5.0.0",
    "httpx>=0.27.0",
    "typer>=0.12.0",
    "rich>=13.7.0",
    "structlog>=24.1.0",
    "pyjwt[crypto]>=2.9.0",
    "pyyaml>=6.0",
    "openai>=1.40.0",
    "ollama>=0.4.0",
    "markdown>=3.6",
    "jinja2>=3.1.0",
]

[project.optional-dependencies]
neo4j = ["neo4j>=5.20.0"]
local-embed = ["fastembed>=0.3.0"]
eval-agentic = ["cursor-sdk>=0.1.7"]
hnsw = ["hnswlib>=0.8.0", "numpy>=1.26,<2.5"]
otel = [
    "opentelemetry-api>=1.27.0",
    "opentelemetry-sdk>=1.27.0",
    "opentelemetry-exporter-otlp>=1.27.0",
    "opentelemetry-instrumentation-asgi>=0.48b0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.0",
    "mypy>=1.10.0",
    "types-pyyaml>=6.0",
    "types-Markdown>=3.6",
    "fakeredis>=2.23.0",
    "httpx>=0.27.0",
    "hnswlib>=0.8.0",
    "types-hnswlib",
    "numpy>=1.26,<2.5",
]

[project.scripts]
teamshared = "teamshared.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/teamshared"]

[tool.hatch.build.targets.wheel.force-include]
"plugins/teamshared/rules/teamshared.mdc" = "teamshared/clients/teamshared.mdc"
"README.md" = "teamshared/clients/README.md"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "SIM", "RUF"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
# Typer requires typer.Option in defaults; that pattern is idiomatic.
"src/teamshared/cli.py" = ["B008"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
disallow_untyped_defs = true
exclude = ["tests/"]

[[tool.mypy.overrides]]
# Optional dependencies: not installed in the base/dev env, so don't fail the
# strict run on a missing stub. `neo4j` is gated behind the `neo4j` extra.
module = ["mem0.*", "neo4j.*", "markdown.*", "opentelemetry.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
# redis-py's async client inherits the *sync* command signatures, typed as
# `ResponseT = Awaitable[T] | T`. Under strict mode mypy then reads every
# awaited call as a possible non-awaitable (`misc`) and the awaited result as
# `Any` (`no-any-return`). It is a library-shape limitation, not our bug; the
# wrappers are covered by integration tests. Scope the relaxation tightly to
# the two thin redis wrappers so real type errors elsewhere still surface.
module = ["teamshared.memory.working", "teamshared.server.health"]
disable_error_code = ["misc", "no-any-return"]

[[tool.mypy.overrides]]
# FastMCP's `@mcp.tool()` decorator is untyped, which under strict mode marks
# every registered tool function "untyped". The tool bodies are thin façades
# pinned by tests/test_server_tools.py; relax only this code, only here.
module = ["teamshared.server.tools"]
disable_error_code = ["untyped-decorator"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "-ra --strict-markers"
testpaths = ["tests"]
